fix: remove white space between subscribe section and footer

--- a/client/src/components/SubscribeSection.css
+++ b/client/src/components/SubscribeSection.css
@@ -2,17 +2,15 @@
   background: radial-gradient(circle at top left, #2b2f38, #1f2430);
   padding: 90px 14%;
   border-radius: 16px;
-  margin: 100px auto ;
+  margin: 0 auto;
   text-align: center;
   color: white;
-
   display: flex;
   flex-direction: column;
   gap: 24px;
-
   box-shadow:
-  0 20px 40px rgba(0, 0, 0, 0.10),
-  0 4px 12px rgba(0, 0, 0, 0.06);
+    0 20px 40px rgba(0, 0, 0, 0.10),
+    0 4px 12px rgba(0, 0, 0, 0.06);
 }
   
 .subscribe h3 {
